Fixed btn misalignment firefox

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -5,6 +5,10 @@
   font-family: "Lato", sans-serif;
 }
 
+.btn > *:first-child > *:first-child {
+  height: 100%;
+}
+
 a {
   text-decoration: none;
   color: inherit;
